Snap.svgでロゴアニメーション

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <noscript>
       <strong>We're sorry but ceiq-web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <script src="./SnapSVGAnimator/js/vendor/snap.svg/snap.svg-min.js"></script>
+    <script src="./SnapSVGAnimator/js/SnapSVGAnimator.min.js"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
