スマートフォン時の挙動

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta id="vp" name="viewport" content="width=device-width, initial-scale=1">
+    <script>
+    var setViewport = function() {
+        var mvp = document.getElementById('vp');
+        if (screen.width < 420) {
+          mvp.setAttribute('content','user-scalable=no,width=420');
+        }
+        else {
+          mvp.setAttribute('content','width=device-width, initial-scale=1');
+        }
+        console.log("viewport");
+    }
+    //window.addEventListener('load', setViewport);
+    setViewport();
+    window.addEventListener('resize', setViewport);
+    </script>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>CEiQ - 九州のクリエイター交流イベント</title>
+    <!-- TODO: 取り除く OGP favicon -->
+    <meta name="robots" content="noindex" />
   </head>
   <body>
     <noscript>
