--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <script>
     var setViewport = function() {
         var mvp = document.getElementById('vp');
-        if (screen.width < 420) {
+        console.log("width -> " + window.innerWidth);
+        console.log(mvp);
+        if (window.innerWidth <= 420) {
           mvp.setAttribute('content','user-scalable=no,width=420');
         }
         else {
