CC2の講演タイトル

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head prefix="og: http://ogp.me/ns# website: http://ogp.me/ns/website#">
+    <!-- Made by wararyo work.wararyo.com -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta id="vp" name="viewport" content="width=device-width, initial-scale=1">
